--- a/content/resources/9-52s01-th.md
+++ b/content/resources/9-52s01-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Photo of monkeys and humans studying each other.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Monkeys studying humans studying monkeys (thumbnail)
 uid: ddb3dc6f-2d79-fe51-8342-b5e40266ddb2
 ---
 Photograph of monkeys studying humans studying monkeys. (Image by Prof. Gerald Schneider.)
-
