--- a/content/resources/9-52s01.md
+++ b/content/resources/9-52s01.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Photo of monkeys and humans studying each other.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Monkeys studying humans studying monkeys
 uid: fd5c8cf8-e50f-7065-a106-57b549440a2e
 ---
 Photograph of monkeys studying humans studying monkeys. (Image by Prof. Gerald Schneider.)
-
