--- a/content/resources/9-52s01-th.md
+++ b/content/resources/9-52s01-th.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Photograph of monkeys studying humans studying monkeys. (Image by Prof.
   Gerald Schneider.)
 file: /courses/9-52-b-topics-in-brain-and-cognitive-sciences-human-ethology-spring-2001/ddb3dc6f2d79fe518342b5e40266ddb2_9-52s01-th.jpg
+file_size: 11531
 file_type: image/jpeg
 image_metadata:
   caption: Monkeys studying humans studying monkeys. (Image by Prof. Gerald Schneider.)
