--- a/content/resources/9-52s01.md
+++ b/content/resources/9-52s01.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Photograph of monkeys studying humans studying monkeys. (Image by Prof.
   Gerald Schneider.)
 file: /courses/9-52-b-topics-in-brain-and-cognitive-sciences-human-ethology-spring-2001/fd5c8cf8e50f7065a10657b549440a2e_9-52s01.jpg
+file_size: 131125
 file_type: image/jpeg
 image_metadata:
   caption: Monkeys studying humans studying monkeys. (Image by Prof. Gerald Schneider.)
